#1 Change reload icon

--- a/src/proviedInfoList.html
+++ b/src/proviedInfoList.html
@@ -1,7 +1,7 @@
 <div>
   <input id="infoSearchKeyword" type="text" name="infoSearchKeyword" size="32" />
   <button id="createInfo" data-target="#modal-infoEditor" data-toggle="modal">新規作成</button>
-  <img class="infoReload" src="./img/parts_ico_reload.png" onclick="return false;"></img>
+  <i id="infoReload" class="fa fa-refresh fa-2x" aria-hidden="true"></i>
 </div>
 <div>
   <table class="borderTable">
